# ffmpegapp

./: README.md  build.gradle  readme_egl_contxt  readme_opengles  readme_shader_program  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yw/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib_copy.cpp
app/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
app/src/main/cpp/media/: base_decoder.cpp  base_decoder.h  const.h  decode_state.h  i_decode_state_cb.cpp  i_decode_state_cb.h  i_decoder.h  one_frame.h
app/src/main/cpp/media/video/: v_decoder.cpp  v_decoder.h
app/src/main/cpp/play/: player.cpp  player.h
app/src/main/cpp/render/video/: native_render.cpp  native_render.h  video_render.h
app/src/main/cpp/utils/: logger.h  timer.c
app/src/main/java/camera/: CameraSensor.java  CameraXActivity.java  ImageActivity.java  SurfaceCameraMp4Activity.java  SurfaceViewCamera2PreviewActivity.java  TextureViewCamera2PreviewActivity.java
app/src/main/java/com/yw/ffmpeg/: BaseActivity.java  CJVMActivity.java  EGLSimpleActivity.java  FFmpegSimpleActivity.java  GenerateMp4Activity.java  MainActivity.java  MediaCodecActivity.java  OpenGlEsPlayerActivity.java  OpenGlesDrawBitmapActivity.java  OpenGlesDrawTriangleActivity.java  SimpleImageActivity.java  SimpleTriangleActivity.java
app/src/main/java/com/yw/ffmpeg/adapter/: BaseListAdapter.java  MainAdapter.java
app/src/main/java/com/yw/ffmpeg/bean/: ClassBean.java
app/src/main/java/com/yw/ffmpeg/cjvm/: CJVM.java
app/src/main/java/com/yw/ffmpeg/egl/: CustomerGLRender.java  EGLCore.java  EGLRender.java  EGLSurfaceHolder.java  RenderMode.java  RenderState.java  RenderThread.java
app/src/main/java/com/yw/ffmpeg/harddecoding/: BaseDecoder.java  DecodeState.java  Frame.java  IDecoder.java  IDecoderProgress.java  IDecoderStateListener.java  IExtractor.java
app/src/main/java/com/yw/ffmpeg/harddecoding/decoder/: AudioDecoder.java  VideoDecoder.java
app/src/main/java/com/yw/ffmpeg/harddecoding/encoder/: AudioEncoder.java  BaseEncoder.java  DefEncoderStateListener.java  IEncodeStateListener.java  VideoEncoder.java
app/src/main/java/com/yw/ffmpeg/harddecoding/extractor/: AudioExtractor.java  MMExtractor.java  VideoExtractor.java
app/src/main/java/com/yw/ffmpeg/media/: MediaInfo.java  MySimpleMediaPlayer.java
app/src/main/java/com/yw/ffmpeg/muxer/: MMuxer.java  Mp4Repack.java
app/src/main/java/com/yw/ffmpeg/opengles/: BitmapDrawer.java  IDrawer.java  OpenGlTools.java  SimpleRender.java  TriangleDrawer.java  VideoDrawer.java
app/src/main/java/com/yw/ffmpeg/opengles/simple/: ELShaderUtil.java  MyGLSurfaceView.java  MyGLTextureView.java
app/src/main/java/com/yw/ffmpeg/utils/: ActivityUtils.java  LogUtil.java  PermissionUtils.java
app/src/main/res/layout/: activity_camerax_layout.xml  activity_cjvm.xml  activity_egl_simple.xml  activity_generate_mp4.xml  activity_main.xml  activity_media_codec.xml  activity_opengl_es_player.xml  activity_simple_triangle.xml  activity_surface_camera_mp4.xml  activity_surface_camera_preview.xml  activity_texture_view_camera_preview.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yw/ffmpeg/: ExampleUnitTest.java
cameralib/src/androidTest/java/com/yw/cameralib/: ExampleInstrumentedTest.java
cameralib/src/main/: AndroidManifest.xml
cameralib/src/main/java/com/yw/cameralib/camera/: Camera1Manager.java
cameralib/src/main/java/com/yw/cameralib/camera/media/: CameraRecorder.java
cameralib/src/main/java/com/yw/cameralib/camera/utils/: CameraUtil.java  DimemsionUtil.java  ImageUtil.java  PermisstionUtil.java  StorageUtil.java
cameralib/src/main/java/com/yw/cameralib/camera/widget/: CameraFocusView.java  CameraProgressButton.java  CameraSwitchView.java
cameralib/src/main/java/com/yw/cameralib/camera2/: Camera2Manager.java
cameralib/src/test/java/com/yw/cameralib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
setlibrary/src/main/java/com/yw/setlibrary/: MainClass.java
setlibrary/src/main/java/com/yw/setlibrary/interceptormodel/: Chain.java  CloseRefrigeratorHandler.java  Handler.java  MoveElephantHandler.java  OpenRefrigeratorHandler.java  ProcessChain.java  RequestContext.java
